--- a/styles/style.css
+++ b/styles/style.css
@@ -5,3 +5,110 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+
+/* shared style here */
+
+.primary-button{
+    background-color: #FF900E;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    width: 180px;
+    height: 65px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+.display-flex{
+    display: flex;
+}
+
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+
+/* Dark 01 */
+.color-gray-deap{
+    color: #131313;
+}
+
+/* Dark 02 */
+.color-gray{
+    color: #424242;
+}
+
+/* Dark 03 */
+
+.color-light-gray{
+    color: #727272;
+}
+
+
+
+/* navbar style here startss */
+
+/* header{
+    max-width: 1440px;
+    margin: 0 auto;
+} */
+
+.brand{
+    font-weight: 700;
+    font-size: 2.4rem;
+}
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.nav-item{  
+    list-style: none;
+    margin-left: 30px;
+
+}
+.nav-link{
+    text-decoration: none;
+}
+
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+
+
+/* nammer style */
+
+.banner-content{
+    max-width: 860px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.banner-title{
+    font-weight: 700px;
+    font-size: 4rem;
+}
+.banner-img{
+    max-width: 100%;
+}
+.banner-des{
+    padding-bottom: 22px;
+}
+
+/* resposive media query */
+
+
+@media screen and (max-width: 576px){
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
+    
+}
