--- a/styles/style.css
+++ b/styles/style.css
@@ -299,6 +299,20 @@ main{
         flex-direction: column;
         align-items: center;
     }
+    .nav-links li{
+        height: 4vh;
+        width: 100%;
+        background-color: #FF900E;
+        color: #131313;
+        font-size: 100%;
+        font-weight: 700;
+        margin: 10px;
+    }
+    .nav-link{
+        text-align: center;
+        padding-left: 20px;
+        padding-top: 20px;
+    }
      .teams-picture {
         display: grid;
         grid-template-columns: repeat(1,1fr); /* adjusts on small screens */
